# CPP_Voxel_Engine

./: CMakeLists.txt
modules/: config.cmake  headers.cmake
resources/: CMakeLists.txt
resources/shaders/: crosshair.vert  main.vert
shaders/: CMakeLists.txt  main.frag  main.vert
src/: CMakeLists.txt  macros.hpp  main.cpp
src/engine/: CMakeLists.txt
src/engine/graphics/: Shader.cpp
src/engine/window/: Events.cpp  Events.hpp  Window.cpp
src/examples/: CMakeLists.txt  voxels.cpp
src/graphics/: Mesh.cpp  Mesh.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VoxelRenderer.cpp  VoxelRenderer.hpp
src/utils/: loaders.cpp  loaders.hpp  macros.hpp
src/voxels/: CMakeLists.txt  Chunk.cpp  Chunk.hpp  Chunks.cpp  Chunks.hpp  VoxelRenderer.cpp  VoxelRenderer.hpp  voxel.cpp  voxel.hpp
src/window/: Camera.cpp  Camera.hpp  Events.cpp  Events.hpp  Window.cpp  Window.hpp
textures/: CMakeLists.txt
